--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,13 +1,10 @@
-.clients-list {
+.clients__list {
   display: flex;
   justify-content: space-between;
 }
 
-.clients-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
+.clients__link {
+  @extend %centered-flex;
   width: 170px;
   height: 92px;
   border: 1px solid var(--soc-icon-fill-in-team-section);
@@ -19,11 +16,11 @@
   }
 }
 
-.icon-clients {
+.clients__icon {
   fill: var(--soc-icon-fill-in-team-section);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  .clients-link:hover &,
-  .clients-link:focus & {
+  .clients__link:hover &,
+  .clients__link:focus & {
     fill: var(--accent-color);
   }
 }
