--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -18,7 +18,7 @@
   background-size: cover;
 }
 
-.hero-text {
+.hero__text {
   width: 696px;
   font-weight: 900;
   font-size: 44px;
@@ -32,6 +32,7 @@
   margin-bottom: 30px;
 }
 
-.hero-btn {
+.hero__btn {
   padding: 10px 24px;
+  @extend %btn;
 }
