--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -22,11 +22,13 @@
   padding: 40px;
 }
 
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -150%) scale(1.5);
+.backdrop.is-hidden {
+  .modal {
+    transform: translate(-50%, -150%) scale(1.5);
+  }
 }
 
-.modal-close {
+.modal__close {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -37,9 +39,8 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @extend %centered-flex;
+
   cursor: pointer;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
@@ -54,7 +55,7 @@
   pointer-events: none;
 }
 
-.modal-title {
+.modal__title {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
@@ -63,7 +64,7 @@
   margin-bottom: 12px;
 }
 
-.modal-input {
+.modal__input {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -77,12 +78,12 @@
   }
 }
 
-.modal-input:focus + .icon-modal-input,
-.modal-input:hover + .icon-modal-input {
+.modal__input:focus + .modal__icon,
+.modal__input:hover + .modal__icon {
   fill: var(--accent-color);
 }
 
-.modal-input-group {
+.modal__label {
   display: block;
   margin-bottom: 10px;
   font-weight: 400;
@@ -92,12 +93,12 @@
   color: var(--secondary-text-color);
 }
 
-.input-wrapper {
+.modal__input-wrapper {
   position: relative;
   margin-top: 4px;
 }
 
-.icon-modal-input {
+.modal__icon {
   position: absolute;
   top: 50%;
   left: 12px;
@@ -105,7 +106,7 @@
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-textarea {
+.modal__textarea {
   width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -127,17 +128,17 @@
   }
 }
 
-.modal-input-group.textarea {
+.modal__label--textarea {
   margin-bottom: 20px;
 }
 
-.checkbox-input-wrapper {
+.modal__checkbox-wrapper {
   margin-bottom: 30px;
   display: flex;
   justify-content: center;
 }
 
-.check-label {
+.checkbox__label {
   display: flex;
   align-items: center;
   &::before {
@@ -153,7 +154,11 @@
   }
 }
 
-.modal-input-checkbox:checked + .check-label::before {
+.checkbox__input {
+  @extend %visually-hidden;
+}
+
+.checkbox__input:checked + .checkbox__label::before {
   border-color: transparent;
   background-image: url("../images/check.svg");
   background-repeat: no-repeat;
@@ -161,15 +166,16 @@
   background-position: center;
 }
 
-.politic-link {
+.checkbox__politic-link {
   color: var(--accent-color);
   display: inline;
   text-decoration: underline;
 }
 
-.modal-submit-btn {
+.modal__submit-btn {
   text-align: center;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  @extend %btn;
 }
