--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -3,3 +3,45 @@
   align-items: center;
   justify-content: center;
 }
+// @extend %centered-flex;
+
+%visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+// @extend %visually-hidden;
+
+%btn {
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--simple-white-color);
+
+  min-width: 200px;
+  height: 50px;
+
+  background-color: var(--accent-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+  cursor: pointer;
+
+  &:hover,
+  &:focus {
+    background-color: var(--bgc-hero-btn-hover);
+  }
+}
+// @extend %btn;
